fix(dashboard): fix x-axis labels on bar charts
- Prevent xTicks labels from getting cut off
- Adjust styling to match changes to small area charts:
  - Change color of y tick lines to #b2bbbf
  - Adjust markup for better x alignment on y ticks
  - Introduce style sheet for bar charts

Fixes COVID19Tracking/website#531

--- a/src/pages/dashboard/dashboard.scss
+++ b/src/pages/dashboard/dashboard.scss
@@ -159,14 +159,15 @@ $chart-header-bp-lg: 960px;
 }
 
 .chart-expand-button {
-  background-color: #F2F5FC;
+  background-color: #f2f5fc;
   border: 0.08rem solid #788598;
   border-radius: 8px;
-  cursor: pointer;    cursor: pointer;
+  cursor: pointer;
+  cursor: pointer;
   text-align: center;
   padding: 0.4rem;
   float: left;
-  color: #4C5559;
+  color: #4c5559;
 
   p {
     color: #000000;
@@ -174,10 +175,10 @@ $chart-header-bp-lg: 960px;
     top: -0.2rem;
     margin-bottom: 0.2rem;
     text-align: left;
-    width: 86%; 
+    width: 86%;
   }
 }
 
 .gridlines {
-  opacity: .7;
+  opacity: 0.7;
 }
